[package]
name = "webdriver_client"
description = "WebDriver client library"
license = "ISC"
version = "0.1.0"
authors = ["raf",
           "Alex Helfet <alex.helfet@gmail.com>"]
repository = "https://github.com/fluffysquirrels/webdriver_client_rust"
documentation = "https://docs.rs/webdriver_client"
keywords = ["webdriver", "testing", "browser"]

[badges]
travis-ci = { repository = "fluffysquirrels/webdriver_client_rust" }

[dependencies]
derive_builder = "^0.5"
hyper = "^0.10"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
log = "^0.3"
rand = "^0.3"
rustyline = { version = "^1.0", optional = true }
stderrlog = "^0.2"
clap = "^2.0"

[dev-dependencies]
env_logger = "^0.4"

[features]
default = ["shell"]
shell = ["rustyline"]

[[bin]]
name = "www"
path = "src/bin/www.rs"
required-features = ["shell"]

# Use a pre-release version of derive_builder that fixes issue
# <https://github.com/colin-kiegel/rust-derive-builder/issues/104>
[patch.crates-io.derive_builder]
git = "https://github.com/colin-kiegel/rust-derive-builder"
rev = "2585c5b1cbfacfc3450deafb0e3df6055da38bf7"