[package]
name = "webdriver_client"
description = "WebDriver client library"
license = "ISC"

# Next version is v0.2 due to changes in #9, #14:
# * Add NewSessionCmd argument ot Driver.session().
version = "0.2.0-alpha"
authors = ["raf",
           "Alex Helfet <alex.helfet@gmail.com>"]
repository = "https://github.com/fluffysquirrels/webdriver_client_rust"
keywords = ["webdriver", "testing", "browser"]
categories = ["api-bindings", "development-tools", "web-programming"]
readme="README.md"

[badges.travis-ci]
repository = "fluffysquirrels/webdriver_client_rust"
branch = "master"

[dependencies]
derive_builder = "^0.5.1"
hyper = "^0.10"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
log = "^0.3"
rand = "^0.3"
rustyline = { version = "^1.0", optional = true }
stderrlog = "^0.2"
clap = "^2.0"

[dev-dependencies]
env_logger = "^0.4"

[features]
default = ["shell"]
shell = ["rustyline"]

[[bin]]
name = "www"
path = "src/bin/www.rs"
required-features = ["shell"]
