[package]
name = "webdriver_client"
version = "0.2.2"

description = "WebDriver client library"
license = "ISC"
repository = "https://github.com/fluffysquirrels/webdriver_client_rust"
keywords = ["webdriver", "testing", "browser"]
categories = ["api-bindings", "development-tools", "web-programming"]
readme="README.md"
authors = ["equalsraf <raf-ep@gmx.com>",
           "Alex Helfet <alex.helfet@gmail.com>"]

[badges.travis-ci]
repository = "fluffysquirrels/webdriver_client_rust"
branch = "master"

[dependencies]
derive_builder = "^0.5.1"
hyper = "^0.10"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
log = "^0.3"
rand = "^0.3"
rustyline = { version = "^1.0", optional = true }
stderrlog = "^0.2"
clap = "^2.0"

[dev-dependencies]
env_logger = "^0.4"

[features]
default = ["shell"]
shell = ["rustyline"]

[[bin]]
name = "www"
path = "src/bin/www.rs"
required-features = ["shell"]
